# SlotBot

./: Cargo.toml
scripts/: init_db.sh
src/: command_handlers.rs  commands.rs  handler.rs  handlers.rs  lib.rs  main.rs  repositories.rs
src/command_handlers/: admin_commands_handlers.rs  base_commands_handlers.rs  client_commands_handlers.rs  worker_commands_handlers.rs
src/handlers/: base_commands.rs  user_commands.rs  worker_commands.rs
src/repositories/: admin_repository.rs  client_repository.rs  repo.rs  user_repository.rs  worker_repository.rs
