[package]
name = "SlotBot"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "migrate"
]
