[package]
name = "SlotBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
