[package]
name = "SlotBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
